package com.batiaev.provisioner.model.vm;

public enum DiskType {
    HDD,
    SDD
}
