package com.batiaev.provisioner.model.vm;

public enum OSType {
    WINDOWS,
    LINUX,
    MACOS
}
