package com.batiaev.provisioner.model.vm;

public enum RequestState {
    CREATED,
    STARTED,
    FAILED,
    COMPLETED
}
